test: List.of()를 Arrays.asList()로 변경 (불변성 보장)   - 이전에 커밋한 "Arrays.asList()를 List.of()로 변경" 내용 되돌리기