@@ -1,6 +1,6 @@
 package racingcar.domain.car.provider;
 
-import java.util.List;
+import java.util.Arrays;
 import java.util.stream.Stream;
 
 import org.junit.jupiter.params.provider.Arguments;
@@ -9,29 +9,29 @@ class CarsTestProvider {
 
     public static Stream<Arguments> provideForDuplicateExceptionTest() {
         return Stream.of(
-                Arguments.of(List.of("slow", "if", "slow")),
-                Arguments.of(List.of("slow", "if", "test", "test"))
+                Arguments.of(Arrays.asList("slow", "if", "slow")),
+                Arguments.of(Arrays.asList("slow", "if", "test", "test"))
         );
     }
 
     public static Stream<Arguments> provideForConstructorTest() {
         return Stream.of(
-                Arguments.of(List.of("slow", "if", "poby", "hello")),
-                Arguments.of(List.of("poby", "sinb", "slow", "hello")),
-                Arguments.of(List.of("123", "a-bd", "cc sd", "a"))
+                Arguments.of(Arrays.asList("slow", "if", "poby", "hello")),
+                Arguments.of(Arrays.asList("poby", "sinb", "slow", "hello")),
+                Arguments.of(Arrays.asList("123", "a-bd", "cc sd", "a"))
         );
     }
 
     public static Stream<Arguments> provideForPlayRoundTest() {
         return Stream.of(
                 Arguments.of(
-                        List.of("slow", "if", "poby"),
-                        1, List.of(false, true, true),
-                        List.of("slow : ", "if : -", "poby : -")),
+                        Arrays.asList("slow", "if", "poby"),
+                        1, Arrays.asList(false, true, true),
+                        Arrays.asList("slow : ", "if : -", "poby : -")),
                 Arguments.of(
-                        List.of("slow", "if", "poby"),
-                        2, List.of(false, true, true, true, false, true),
-                        List.of(
+                        Arrays.asList("slow", "if", "poby"),
+                        2, Arrays.asList(false, true, true, true, false, true),
+                        Arrays.asList(
                                 "slow : ", "if : -", "poby : -",
                                 "slow : -", "if : -", "poby : --"))
         );
@@ -40,13 +40,13 @@ class CarsTestProvider {
     public static Stream<Arguments> provideForGetWinnerNamesTest() {
         return Stream.of(
                 Arguments.of(
-                        List.of("slow", "if", "poby"),
-                        1, List.of(false, true, true),
-                        List.of("if", "poby")),
+                        Arrays.asList("slow", "if", "poby"),
+                        1, Arrays.asList(false, true, true),
+                        Arrays.asList("if", "poby")),
                 Arguments.of(
-                        List.of("slow", "if", "poby"),
-                        2, List.of(false, true, true, true, false, true),
-                        List.of("poby"))
+                        Arrays.asList("slow", "if", "poby"),
+                        2, Arrays.asList(false, true, true, true, false, true),
+                        Arrays.asList("poby"))
         );
     }
 
